- Fixed return of DBUtil::selectExpandedObjectCount(), should not return false for 0 count (issue #512)
- Fixed error related to wrong case use in the Mobile theme (issue #529)
- Fixed ValidationUtil::validateField() return if a validation error for given field already exists (issue #534)

Features:
- Added development/debug email mode
- Added basic setup for jQuery ajax to pass csfr token checks

CHANGELOG - ZIKULA 1.3.4
------------------------

- Update jQuery-UI to 1.8.23
- Update jQuery to 1.8.1
- Fixed invalid URL send in Password recovery (issue #443)
- Fixed users module failing to send password recovery (admin) (issue #459)
- Fixed category management migration 1.2.6 -> 1.3. The display_name and display_desc are updated fine during upgrade from Zikula 12x to Zikula 134 (issue #69)
- Fixed checks in DateUtil::getDateFormatData (issue #198)
- Added message about clearing the database when re-install is needed (issue #200)
- Updated config.php for PHP 5.4 compatibility with explicit E_STRICT excluding in production (issue #451)
- Fixed php warning with array usage in Users_Controller_Admin (issue #440)
- Added a param minLength to the Textinput form plugin (issue #445)
- Added mandatory Param for checkboxes to the Checkbox form plugin (issue #456, #457))
- Adjusted form contextmenu to work again in IE browsers for submitting from a hidden div (module Content uses this a lot) (issue #423)
- Fixed access to admin in IE8 (issue #420)
- Fixed no redirect from session expired page (issue #416)
- Fixed JS error in IE8 when clicking a submit button (issue #451)
- Fixed normalized paths in Menutree, especially for custom templates/styles (issue #414)
- Fixed formcategorycheckboxlist plugin to enable multiple category selection with Doctrine2 (issue #403, #404)
- Fixed creating a category via right click (issue #316)
- Added ability to edit empty menuitems (with a space char) in Menutree, although using stylesheets is the recommmended way (issue #264)